@@ -1,4 +1,3 @@
-
 /*
  * Copyright (C) 2003-2012 FreeIPMI Core Team
  * 
@@ -674,6 +673,28 @@ extern "C" {
 /*
  * OEM Bridge Commands
  */
+
+#define IPMI_COMP_CODE_GENERIC_COMPLETION_CODES_MIN 0xC0
+#define IPMI_COMP_CODE_GENERIC_COMPLETION_CODES_MAX 0xFF
+
+#define IPMI_COMP_CODE_GENERIC_COMPLETION_CODES(__comp_code) \
+  (((__comp_code) == IPMI_COMP_CODE_COMMAND_SUCCESS \
+    || ((__comp_code) >= IPMI_COMP_CODE_GENERIC_COMPLETION_CODES_MIN \
+	&& (__comp_code) <= IPMI_COMP_CODE_GENERIC_COMPLETION_CODES_MAX)) ? 1 : 0)
+
+#define IPMI_COMP_CODE_DEVICE_SPECIFIC_CODES_MIN 0x01
+#define IPMI_COMP_CODE_DEVICE_SPECIFIC_CODES_MAX 0x7E
+
+#define IPMI_COMP_CODE_DEVICE_SPECIFIC_CODES(__comp_code) \
+  (((__comp_code) >= IPMI_COMP_CODE_DEVICE_SPECIFIC_CODES_MIN \
+    && (__comp_code) <= IPMI_COMP_CODE_DEVICE_SPECIFIC_CODES_MAX) ? 1 : 0)
+
+#define IPMI_COMP_CODE_COMMAND_SPECIFIC_CODES_MIN 0x80
+#define IPMI_COMP_CODE_COMMAND_SPECIFIC_CODES_MAX 0xBE
+
+#define IPMI_COMP_CODE_COMMAND_SPECIFIC_CODES(__comp_code) \
+  (((__comp_code) >= IPMI_COMP_CODE_COMMAND_SPECIFIC_CODES_MIN \
+    && (__comp_code) <= IPMI_COMP_CODE_COMMAND_SPECIFIC_CODES_MAX) ? 1 : 0)
 
 #ifdef __cplusplus
 }
