@@ -1,3 +1,11 @@
+2012-03-05  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Add
+	macros for completion code ranges.
+
+	* libfreeipmi/util/ipmi-error-util.c
+	(ipmi_completion_code_strerror_r): Use new macros.
+	
 2012-03-01  Albert Chu <chu11@llnl.gov>
 
 	* ipmipower/ipmipower_connection.c (_connection_setup): Support
